# rust-axum-linkshort-app-example

./: Cargo.toml  comands  docker-compose.yml  sqlx-data.json
migrations/: 20240321132953_links.down.sql  20240321132953_links.up.sql  20240322033342_link_statistics.up.sql
src/: main.rs  routes.rs  utils.rs
